--- a/ChorãoUtilities/.gitignore
+++ b/ChorãoUtilities/.gitignore
@@ -1,4 +1,4 @@
-/ChoraoUtilities/obj/Debug/ChoraoUtilities.csproj.AssemblyReference
+/obj/Debug/ChoraoUtilities.csproj.AssemblyReference.cache
 /bin/*
 /obj/*
 .vs/
